add abstract entities

--- a/.project
+++ b/.project
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-<<<<<<< HEAD
-	<name>secpndProject</name>
-=======
-	<name>firstProject</name>
->>>>>>> branch 'master' of https://github.com/vasyavasilisa/javaBasics
+	<name>proxilayer</name>
 	<comment></comment>
 	<projects>
 	</projects>
